--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -5,6 +5,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SubActivity">
+        tools:context=".SubActivity" android:id="@+id/constraintLayout">
 
+    <fragment
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" android:name="com.example.animalbook.TitleFragment"
+            android:id="@+id/titleFragment" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" tools:layout="@layout/fragment_title"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
