--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -10,7 +10,7 @@
     <fragment
             android:layout_width="0dp"
             android:layout_height="wrap_content" android:name="com.example.animalbook.TitleFragment"
-            android:id="@+id/titleFragment" app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/titleFragmentMain" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" tools:layout="@layout/fragment_title"/>
     <Button
@@ -20,7 +20,7 @@
             android:id="@+id/lionButton"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toStartOf="@+id/hippoButton"
-            app:layout_constraintTop_toBottomOf="@+id/titleFragment" android:layout_marginTop="24dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/titleFragmentMain" android:layout_marginTop="24dp"/>
     <Button
             android:text="カバ"
             android:layout_width="wrap_content"
